phpmd-1.0.1 (2011/02/12)
========================

- Fixed #9930643: The include_path does not match with PHP_Depend's new
  directory layout. Fixed with commit #531be78.
- Fixed #9626017: Clear temporary resources after a test has finished.
  Fixed with commit #b385f15.

phpmd-1.0.0 (2011/02/05)
========================

- Fixed #9626017: Clear temporary resources after a test has finished. Fixed
  with commit #b385f15.
- New source layout that follows maven's conventions for the directory
  structure of a product.
- Switched to PHPUnit 3.5.x as testing framework

phpmd-0.2.8 (2010/11/25)
========================

- Improved help text for the PHPMD command line. Thanks to Volker
  Dusch for this contribution. https://github.com/edorian/phpmd
- PHPMD is now compatible with next PHP_Depend release 0.10.0

phpmd-0.2.7 (2010/09/01)
========================

- Fixed #36: @SupressWarnings annotation does not work for 
  UnusedPrivateMethod rule. Fixed in svn revision #284.
- Fixed #35: Stream Writer closes STDOUT. Fixed in svn revision #286.
- Fixed #33: PEAR package.xml does not @php_bin@ and @bin_dir@ on
  phpmd.bat. Fixed in svn revision #264.

phpmd-0.2.6 (2010/07/03)
========================

- Implemented #24: Implement Depth Of Inheritance Rule. Implemented in
  svn revision #253.
- Implemented #25: Implement Number of Children Rule. Implemented in svn
  revision #252.
- Implemented #26: Implement Rule that detects the usage of PHP's eval()
  function. Implemented in svn revision #251.
- Implemented #27: Implement Rule that detects the usage of PHP's exit()
  expression. Implemented in svn revision #250.
- Fixed #28: Unused local variable and unused parameter rule produces
  false positives. Fixed in svn revision #245.
- Implemented #30: New option --version added to PHPMD's command line
  interface. Implemented in svn revision #246.
- Names of several command line options unified with PHPUnit and PHPCPD.