@@ -1,3 +1,9 @@
+phpmd-1.1.0 (2011/03/  )
+========================
+
+- Implemented #10474873: Add rule for PHP's goto statement. Implemented
+  with commit #.
+
 phpmd-1.0.1 (2011/02/12)
 ========================
 
